Added Meta Tags. Added Footer. Change Home UI

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,18 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>TodoList</title>
+  <meta name="description" content="TodoList App created to help people organize their daily task." />
+  <meta property="og:image" content="./todolistlogo.svg">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://todolist-app-omega.vercel.app/" />
+  <meta property="og:title" content="Todo List App V3 by JGAndrade" />
+  <meta property="og:description" content="TodoList App created to help people organize their daily task." />
+  <meta name=”robots” content=”noindex,nofollow”>
+  <link rel="icon" href="./todolistlogo.svg" type="image/gif" sizes="16x16">
+  <title>TodoList App | jgandrade</title>
 </head>
 
 <body>
